footer text-align fixed

--- a/product-landing-page/style.css
+++ b/product-landing-page/style.css
@@ -361,16 +361,19 @@ iframe {
 }
 
 .col-logo {
- display: flex;
- flex-direction: column;
- gap: 1.2rem;
+  display: flex;
+  flex-direction: column;
+  gap: 1.2rem;
 }
 
 .col-links {
-    display: flex;
-    flex-direction: column;
-    align-items: end;
-    justify-content: space-between;
+  display: flex;
+  flex-direction: column;
+  gap: 1.2rem;
+}
+
+.copyright {
+  text-align: end;
 }
 
 .footer-logo {
